# trend_agent

./: .env.example  .gitignore  CHANGE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
monitoring/: prometheus.yml
tests/: conftest.py  test_agents.py  test_api.py  test_content_store.py  test_dedup.py  test_heat_score.py  test_parse_service.py  test_scraper_strategy.py  test_scrapers_third_party.py
trend_agent/: main.py
trend_agent/agents/: base.py  categorizer_agent.py  orchestrator.py  publisher_agent.py  quality_agent.py  scraper_agent.py  summarizer_agent.py  video_agent.py
trend_agent/api/: app.py  auth.py  skeleton.py
trend_agent/config/: settings.py
trend_agent/context/: generation_constraints.py  prompt_templates.py
trend_agent/frontend/: index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
trend_agent/models/: db.py  message.py  parse_contract.py  state_machine.py
trend_agent/observability/: metrics.py
trend_agent/publishers/: base.py  douyin_publisher.py  wechat_publisher.py  weibo_publisher.py  xiaohongshu_publisher.py
trend_agent/scrapers/: base.py  bilibili_scraper.py  github_scraper.py  twitter_scraper.py  weibo_scraper.py  youtube_scraper.py  zhihu_scraper.py
trend_agent/services/: content_store.py  dedup.py  heat_score.py  llm_client.py  multimodal_enricher.py  parse_service.py  scheduler.py  source_normalizer.py
trend_agent/video/: base.py  keling_client.py  pika_client.py  runway_client.py
trend_agent/web/: dashboard.js  index.html  style.css
(+17 files in other folders)
