[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trend_agent"
version = "0.1.0"
description = "Multi-agent system for trending content aggregation, summarization, and cross-platform publishing"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "aiohttp>=3.9.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "aiosqlite>=0.19.0",
    "apscheduler>=3.10.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "prometheus-client>=0.19.0",
    "jieba>=0.42.1",
]

[project.optional-dependencies]
langgraph = ["langgraph>=0.2.0"]
postgres = ["asyncpg>=0.29.0"]
redis = ["redis[hiredis]>=5.0.0"]
s3 = ["boto3>=1.34.0"]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.25.0",
    "respx>=0.21.0",
]

[tool.setuptools.packages.find]
include = ["trend_agent*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "scraper: tests requiring scraper API keys",
    "publisher: tests requiring publisher credentials",
    "video: tests requiring video API keys",
    "integration: full pipeline integration tests",
]
